charts/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app
  labels:
    app.kubernetes.io/name: go-app
    # app.kubernetes.io/instance: go-app-abcxyz
    # app.kubernetes.io/version: "5.7.21"
    # app.kubernetes.io/component: database
    # app.kubernetes.io/part-of: wordpress
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: go-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: go-app
    spec:
      containers:
      - name: go-app
        image: nyanner/golang-app-image:local
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
