charts/service-cip.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-clusterip
spec:
  selector:
    app.kubernetes.io/name: go-app
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8080
