charts/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /go-path
        pathType: Prefix
        backend:
          service:
            name: service-nodeport 
            port:
              number: 9000
